# smallScheduler

./: .gitignore  CMakeLists.txt
src/: main.cpp  schedule.cpp  task.cpp
src/include/: schedule.h  task.h
